force-app/main/default/objects/Product_Images__c/Product_Images__c.object-meta.xml
<CustomObject>
    <description>A Child object to the Product that will store the Images related to the Product</description>
    <label>Product Images</label>
    <nameField>
        <label>Product Images Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Imageses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>