force-app/main/default/objects/Product_Images__c/fields/Hero_Image__c.field-meta.xml
<CustomField>
    <fullName>Hero_Image__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If Selected this image will be displayed on the Product List Page</inlineHelpText>
    <label>Hero Image</label>
    <type>Checkbox</type>
</CustomField>