force-app/main/default/objects/Product_Images__c/validationRules/StaticResourceRule.validationRule-meta.xml
<ValidationRule>
    <fullName>StaticResourceRule</fullName>
    <active>true</active>
    <description>Required if Static Resource is Selected in Image Type</description>
    <errorConditionFormula>ISPICKVAL( Type__c , &apos;Static Resource&apos;)&amp;&amp; ( ISBLANK(  ResourceURL__c )  ||  ISBLANK( Resource__c ))</errorConditionFormula>
    <errorMessage>Resource URL and static resource can not be blank please enter a value</errorMessage>
</ValidationRule>