force-app/main/default/objects/Product_Images__c/validationRules/TypeNone.validationRule-meta.xml
<ValidationRule>
    <fullName>TypeNone</fullName>
    <active>true</active>
    <description>Static Resource, Resource URL, and URL must be left blank if the Image Type is selected as None on the product Image record.</description>
    <errorConditionFormula>ISPICKVAL( Type__c , &apos;None&apos;)  &amp;&amp;  NOT( ISBLANK( Resource__c ) &amp;&amp;  ISBLANK( Resource__c )  &amp;&amp;  ISBLANK( URL__c )  )</errorConditionFormula>
    <errorMessage>Static Resource, Resource URL, and URL must be left blank if the Image Type is selected as None</errorMessage>
</ValidationRule>